fixed problems with IE and Safari

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 <header>
-    <div class="logo"><img src="images/logo.svg" alt="logo">
+    <div class="logo">
+        <a><embed src="images/logo.svg" class="logo"></a>
+<!--        <img src="images/logo.svg" alt="logo">-->
     </div>
     <nav>
 <!--                        <a><embed src="images/logo.svg" class="logo"></a>-->
